# futu_cli

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
src/futu_cli/: __init__.py  api.py  commands.py  config.py  main.py
